# WsBinance

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker_build.sh
examples/: main.cpp
src/: main_app.cpp  main_app.h
src/apis/: api.cpp  api.h  order.cpp  order.h
src/common/: utils.cpp  utils.h
src/connection/: crypto_service.h  hmac_crypto_service.cpp  hmac_crypto_service.h  message.h  message_converter.cpp  message_converter.h  ws_connection.cpp  ws_connection.h  ws_options.h  ws_service.cpp  ws_service.h
